--- a/client/style.css
+++ b/client/style.css
@@ -45,13 +45,16 @@ h1 {
 #colors {
   background-color: #3b3b3b;
   width: 80%;
-  height: 300px;
+  height: 250px;
   margin: auto;
   margin-top: 50px;
   padding: 3%;
   border-radius: 5px;
   box-shadow: 10px 10px 5px #171717;
   text-align: center;
+  position: absolute;
+  bottom: 2%;
+  left: 7%;
 }
 
 .inputfile+label {
@@ -131,6 +134,7 @@ select {
   font-style: normal;
   height: 25px;
   border-radius: 5px;
+  margin-left:10px;
 }
 
 option {
